update slr in crd.yaml

--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -129,6 +129,10 @@ spec:
                   items:
                     type: string
                   type: array
+                endpoints:
+                  items:
+                    type: string
+                  type: array
             status:
               type: object
               properties:
