--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1887,6 +1887,8 @@ spec:
                   type: string
                 u2oInterconnectionIP:
                   type: string
+                u2oInterconnectionVPC:
+                  type: string
                 v4usingIPrange:
                   type: string
                 v4availableIPrange:
