--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1150,6 +1150,8 @@ spec:
                   type: string
                 u2oInterconnectionIP:
                   type: string
+                u2oInterconnectionVPC:
+                  type: string
                 conditions:
                   type: array
                   items:
