fix vip str format

--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1726,6 +1726,9 @@ spec:
       served: true
       storage: true
       additionalPrinterColumns:
+      - name: NS
+        type: string
+        jsonPath: .spec.namespace
       - name: V4IP
         type: string
         jsonPath: .status.v4ip
