--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1415,6 +1415,9 @@ spec:
       served: true
       storage: true
       additionalPrinterColumns:
+      - name: NS
+        type: string
+        jsonPath: .spec.namespace
       - name: V4IP
         type: string
         jsonPath: .status.v4ip
