--- a/charts/templates/ovsovn-ds.yaml
+++ b/charts/templates/ovsovn-ds.yaml
@@ -119,7 +119,7 @@ spec:
             {{- end }}
             {{- if .Values.HYBRID_DPDK }}
             - name: shareddir
-              mountPath: /var/lib/kubelet/pods
+              mountPath: {{ .Values.kubelet_conf.KUBELET_DIR }}/pods
             {{- end }}
           readinessProbe:
             exec:
