--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -5,17 +5,15 @@ permissions:
   pull-requests: write
 
 on:
-  workflow_dispatch:
-# on:
-#   pull_request_target:
-#     branches:
-#       - master
-#       - release-*
-#     paths-ignore:
-#       - 'docs/**'
-#       - '**.md'
-#       - 'go.mod'
-#       - 'go.sum'
+  pull_request_target:
+    branches:
+      - master
+      - release-*
+    paths-ignore:
+      - 'docs/**'
+      - '**.md'
+      - 'go.mod'
+      - 'go.sum'
 
 jobs:
   review-code:
@@ -26,3 +24,4 @@ jobs:
         with:
           apiKey: ${{ secrets.OPENAI_API_KEY }}
           githubToken: ${{ secrets.GITHUB_TOKEN }}
+          apiBaseUrl: ${{ secrets.OPENAI_API_BASE_URL }}
