fix build base ci

--- a/.github/workflows/build-kube-ovn-base.yaml
+++ b/.github/workflows/build-kube-ovn-base.yaml
@@ -51,7 +51,7 @@ jobs:
       - name: Upload image to artifact
         uses: actions/upload-artifact@v3
         with:
-          name: image-arm64
+          name: image-arm64-${{ matrix.branch }}
           path: image-arm64.tar
 
   push:
@@ -70,7 +70,7 @@ jobs:
       - name: Download image
         uses: actions/download-artifact@v3
         with:
-          name: image-amd64
+          name: image-amd64-${{ matrix.branch }}
 
       - name: Download image
         uses: actions/download-artifact@v3
