--- a/.github/workflows/build-kube-ovn-base.yaml
+++ b/.github/workflows/build-kube-ovn-base.yaml
@@ -93,10 +93,13 @@ jobs:
           echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
           docker images
           docker push kubeovn/kube-ovn-base:$TAG-amd64
-          docker push kubeovn/kube-ovn-base:$TAG-debug-amd64
           docker push kubeovn/kube-ovn-base:$TAG-arm64
-          docker push kubeovn/kube-ovn-base:$TAG-debug-arm64
           docker manifest create kubeovn/kube-ovn-base:$TAG kubeovn/kube-ovn-base:$TAG-amd64 kubeovn/kube-ovn-base:$TAG-arm64
           docker manifest push kubeovn/kube-ovn-base:$TAG
-          docker manifest create kubeovn/kube-ovn-base:$TAG-debug kubeovn/kube-ovn-base:$TAG-debug-amd64 kubeovn/kube-ovn-base:$TAG-debug-arm64
-          docker manifest push kubeovn/kube-ovn-base:$TAG-debug
+
+          if [ "${{ matrix.branch }}" == "master" || "${{ matrix.branch }}" == "release-1.11" ]; then
+            docker push kubeovn/kube-ovn-base:$TAG-debug-amd64
+            docker push kubeovn/kube-ovn-base:$TAG-debug-arm64
+            docker manifest create kubeovn/kube-ovn-base:$TAG-debug kubeovn/kube-ovn-base:$TAG-debug-amd64 kubeovn/kube-ovn-base:$TAG-debug-arm64
+            docker manifest push kubeovn/kube-ovn-base:$TAG-debug
+          fi
