--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -1749,6 +1749,8 @@ spec:
                             type: string
                 u2oInterconnection:
                   type: boolean
+                u2oInterconnectionIP:
+                  type: string
                 enableLb:
                   type: boolean
                 enableEcmp:
