--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -2060,6 +2060,8 @@ spec:
                             type: string
                 u2oInterconnection:
                   type: boolean
+                u2oInterconnectionIP:
+                  type: string
                 enableLb:
                   type: boolean
                 enableEcmp:
