--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -714,6 +714,8 @@ spec:
                           - reject
                 u2oInterconnection:
                   type: boolean
+                u2oInterconnectionIP:
+                  type: string
   scope: Cluster
   names:
     plural: subnets
