--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -225,6 +225,8 @@ spec:
                   type: string
                 u2oInterconnection:
                   type: boolean
+                u2oInterconnectionIP:
+                  type: string
   scope: Cluster
   names:
     plural: subnets
