--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -1274,6 +1274,8 @@ spec:
                           - reject
                 u2oInterconnection:
                   type: boolean
+                u2oInterconnectionIP:
+                  type: string
   scope: Cluster
   names:
     plural: subnets
