--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -329,8 +329,9 @@ jobs:
           restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
 
       - name: Install kind
-        uses: helm/kind-action@v1
+        uses: helm/kind-action@v1.7.0
         with:
+          version: v0.20.0
           install_only: true
 
       - name: Install ginkgo
